# HL7-Generator-2000

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  build_installer.py  docker-compose.yml  hl7gen.bat  hl7gen.spec  installer.iss  pyproject.toml  requirements.txt
.claude/: settings.local.json
config/: default.yaml  z_segments.yaml
config/value_sets/: allergies.yaml  appointment_types.yaml  charge_codes.yaml  diagnosis_codes.yaml  document_types.yaml  insurance_plans.yaml  lab_tests.yaml  languages.yaml  locations.yaml  marital_statuses.yaml  medications.yaml  races.yaml  religions.yaml  vaccines.yaml
config/workflows/: annual_physical.yaml  cardiac_workup.yaml  diabetes_management.yaml  er_visit_with_labs.yaml  inpatient_admission.yaml  obstetric_visit.yaml  pediatric_visit.yaml  pharmacy_order.yaml  radiology_order.yaml  scheduled_appointment.yaml  surgical_procedure.yaml  vaccination_visit.yaml
src/: __main__.py  app.py
src/core/: clock.py  config.py  engine.py  patient.py  patient_pool.py  scheduler.py  state.py
src/data/: clinical_data.py  fake_provider.py  identifiers.py  value_set_loader.py
src/generators/: base.py  message_factory.py  z_segment_engine.py
src/templates/: base.html  dashboard.html  destinations.html  login.html  messages.html  (+4 more)
tests/: test_api.py  test_clinical_data.py  test_config.py  test_generators.py  test_helpers.py  test_message_log.py  test_mllp.py  test_pathways.py  test_patient.py  test_segments.py  test_step_handlers.py  test_timeline.py  test_tls_utils.py  test_validator.py  test_z_segments.py
(+85 files in other folders)
