[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "hl7-generator2000"
version = "1.0.0"
description = "Hospital HL7v2 message simulator with web dashboard"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

dependencies = [
    "hl7apy>=1.3.4",
    "fastapi>=0.109.0",
    "python-multipart>=0.0.6",
    "uvicorn[standard]>=0.27.0",
    "jinja2>=3.1.3",
    "faker>=22.0.0",
    "pyyaml>=6.0.1",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "aiofiles>=23.2.1",
    "structlog>=24.1.0",
    "rich>=13.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.26.0",
    "pyinstaller>=6.0.0",
]

[project.scripts]
hl7gen = "src.__main__:main"

[tool.setuptools.packages.find]
include = ["src*", "config*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
